--- a/client/src/assets/components/tables/_tables.scss
+++ b/client/src/assets/components/tables/_tables.scss
@@ -547,3 +547,7 @@
 .rdt_TableRow:hover {
   background-color: $dropdown-link-hover-bg;
 }
+
+.al-text-decoration-line-through {
+  text-decoration: line-through;
+}
