--- a/client/src/assets/layout/responsive/_responsive-base.scss
+++ b/client/src/assets/layout/responsive/_responsive-base.scss
@@ -183,8 +183,7 @@
     }
   }
 
-  .popover,
-  .dropdown-menu {
+  .popover {
     position: fixed !important;
     z-index: 50;
     left: 5% !important;
