--- a/client/src/assets/base.scss
+++ b/client/src/assets/base.scss
@@ -168,3 +168,28 @@
 // Responsive
 
 @import "layout/responsive/responsive-base";
+
+@keyframes shake {
+    0%   { transform: rotate(0deg); }
+    15%  { transform: rotate(15deg); }
+    30%  { transform: rotate(-15deg); }
+    45%  { transform: rotate(10deg); }
+    60%  { transform: rotate(-10deg); }
+    75%  { transform: rotate(5deg); }
+    100% { transform: rotate(0deg); }
+  }
+  
+  .shake {
+    animation: shake 0.8s ease-in-out;
+    transform-origin: center;
+  }
+  
+  .shake-infinite {
+    @extend .shake;
+    animation-iteration-count: infinite;
+  }
+  
+  .shake-on-hover:hover {
+    animation: shake 0.8s ease-in-out;
+  }
+  
