--- a/client/src/assets/layout/responsive/_responsive-base.scss
+++ b/client/src/assets/layout/responsive/_responsive-base.scss
@@ -315,7 +315,9 @@
 @include media-breakpoint-down(sm) {
   
   .ui-theme-settings {
-    display: none;
+    .theme-settings__inner {
+      width: 400px;
+    }
   }
 }
 
